# PAMSI-project2

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TestData.csv  main.cpp  tests.sh
Algorithms/: CMakeLists.txt
Algorithms/fml/: Algorithms.tpp
Algorithms/inc/: Algorithms.hpp
Algorithms/src/: Algorithms.cpp
FilterData/: CMakeLists.txt  filterData.cpp
Movie/: CMakeLists.txt
Movie/inc/: Movie.hpp
Movie/src/: Movie.cpp
firmware/: CMakeLists.txt
firmware/src/: CallArgsParser.cpp  main.cpp
fml/: Sort.tpp
inc/: CallArgsParser.hpp  Movie.hpp  Sort.hpp
src/: CallArgsParser.cpp  Movie.cpp  Sort.cpp
